sso/keycloak-gatekeeper/ingress-resource.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sso-test-app
  name: sso-test-app
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: service
  selector:
    app: sso-test-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-test-app
  template:
    metadata:
      labels:
        app: sso-test-app
    spec:
      containers:
      - name: ambassador-test-app-2
        image: simbu1290/gcp-test:api-test
        ports:
          - containerPort: 5000
      - name: gatekeeper
        image: carlosedp/keycloak-gatekeeper:latest
        args:
        - --config=/etc/keycloak-gatekeeper.conf
        ports:
        - containerPort: 3000
          name: service
        volumeMounts:
        - name: gatekeeper-config
          mountPath: /etc/keycloak-gatekeeper.conf
          subPath: keycloak-gatekeeper.conf
        - name: gatekeeper-files
          mountPath: /html
      volumes:
      - name : gatekeeper-config
        configMap:
          name: gatekeeper-config
      - name : gatekeeper-files
        configMap:
          name: gatekeeper-files
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus-gcp-test.sandbox.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sso-test-app
            port:
              number: 80
